# reporanka

./: .coveragerc  .gitignore  .pylintrc  LICENSE  README.md  coverage.xml  log.html  output.xml  pyproject.toml  report.html  tasks.py
.github/workflows/: main.yml
src/: AppLibrary.py  app.py  app_library.py  command_factory.py  config.py  console_io.py  index.py  stub_book_repository.py  stub_io.py  stub_io_service.py  utilities.py
src/app/: actions.py  app.py  command_factory.py  console_io.py  menu.py
src/data/: blogs.csv  books.csv  db.py  items.csv  test_books.csv  test_items.csv  videos.csv
src/entities/: blog.py  book.py  item.py  video.py
src/libraries/: AppLibrary.py  __init__.py
src/models/: book.py
src/repositories/: blog_repository.py  book_repository.py  item_repository.py  video_repository.py
src/services/: blog_service.py  book_service.py  id_generator.py  io_service.py  item_service.py  video_service.py
src/stubs/: stub_book_repository.py  stub_io.py  stub_item_repository.py  stub_item_service.py
src/tests/: __init__.robot  app_test.py  book.robot  book_service_test.py  console.robot  resource.robot  utilities_test.py
src/tests/app/: app_test.py
src/tests/entities/: blog_test.py  book_test.py  item_test.py  video_test.py
src/tests/repositories/: book_repository_test.py  item_repository_test.py
src/tests/robotframework/: app.robot  blog.robot  book.robot  clear.robot  delete.robot  details.robot  id.robot  list.robot  menu.robot  resource.robot  (+2 more)
src/utilities/: command_factory.py  csv_utilities.py  id_generator.py  utilities.py
(+5 files in other folders)
