[tool.poetry]
name = "reporanka"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.6.0"
shortuuid = "^1.0.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
robotframework = "^4.1.2"
coverage = "^6.2"
pylint = "^2.12.1"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
